--- a/templates/booksforsale.html
+++ b/templates/booksforsale.html
@@ -5,7 +5,7 @@
 
 <section class="container ">
 	<div class="row">
-		<p class="pageHeadTitleMain col-md-3">BOOKS FOR SALE</p>
+		<p class="pageHeadTitleMain col-md-3">OUR PRODUCTS</p>
 	</div>
 </section>
 <div class="container text-center">
