--- a/templates/index.html
+++ b/templates/index.html
@@ -11,23 +11,23 @@
 	</ol>
 	<!-- Wrapper for slides -->
 	<div class="carousel-inner" role="listbox">
-		<div class="item  slidefirst ">
+		<div class="item  slide1 active">
 			<div class="carousel-caption-alawal">
 
-				<p class="animated fadeIn delay-2s">Natural and naturally derived ingredients</p>
+				<p class="animated fadeIn delay-2s">2020 Our story began from a good understanding for the customer needs</p>
 			</div>
 		</div>
-		<div class="item  slide2 active">
+		<div class="item  slide2 ">
 			<div class="carousel-caption-alawal">
 
-				<p class="animated fadeIn delay-2s">Best Cosmetics products of the highest quality
+				<p class="animated fadeIn delay-2s">We were gathering the experince of many experties in the E-commerce
 				</p>
 			</div>
 		</div>
-		<div class="item  slide3">
+		<div class="item  slidethree ">
 			<div class="carousel-caption-alawal">
 
-				<p class="animated fadeIn delay-2s">Let your skin feel the nature</p>
+				<p class="animated fadeIn delay-2s">hoping to give our customers the best of what they are looking for</p>
 			</div>
 		</div>
 	</div>
@@ -49,21 +49,21 @@
 	<div class="container">
 		<h1 class="aboutTitle">OUR PRODUCTS</h1>
 		<p class="aboutData">
-			Al-AWAL Education is qualified in Print books and e-learning technologies including but not limited to
-			online educational content.
+			We were gathering the experince of many experties in the E-commerce, hoping to give our customers the best of what they are looking for,
+			all in one platform
 		</p>
 		<div class="row clientsRow text-center">
 			<div class="col-xs-6 col-md-3 educationSections english">
-				<p>ENGLISH</p>
+				<p class="productTypeName">Food and Beverage</p>
 			</div>
 			<div class="col-xs-6 col-md-3 educationSections science">
-				<p>SCIENCE</p>
+				<p class="productTypeName">Beauty</p>
 			</div>
 			<div class="col-xs-6 col-md-3 educationSections math">
-				<p>MATH</p>
+				<p class="productTypeName">Decor and Gifts</p>
 			</div>
 			<div class="col-xs-6 col-md-3 educationSections">
-				<p>AND MORE...</p>
+				<p class="productTypeName">Others</p>
 			</div>
 		</div>
 		<a href="{% url 'Home_stores:booksforsale' %}"><button class="readmoreButton">EXPLORE OUR PRODUCTS</button></a>
@@ -76,8 +76,7 @@
 	<div class="container text-center">
 		<h1 class="publisheraTitle">OUR PARTNERS</h1>
 		<p class="publishersData">
-			We work with worldwide suppliers, manufacturers and publishers to purchase and ship your school
-			procurement all in one go.
+			We work with worldwide suppliers, to purchase and ship your products all in one place.
 		</p>
 		<div class="owl-carousel owl-theme ">
 
@@ -97,16 +96,14 @@
 	<div class="container">
 		<h1 class="aboutTitle">ABOUT FIRST</h1>
 		<p class="aboutData">
-			First Education is qualified in Print books and e-learning technologies including but not limited to
-			online educational content.
+			2020 Our story began from a good understanding for the customer needs. We were gathering the experince of many experties in the E-commerce, hoping to give our customers the best of what they are looking for, all in one platform.
 		</p>
 		<div class="row clientsRow text-center">
 			<div class="col-xs-6 col-md-3 educationSections american">
 				<p >CUSTOMER OBSESSED</p>
 				<p class="text">Exceeding our customers'
 expectations always is at the
-core of everything we do by
-offering a superior customer
+core of everything we do by a superior customer
 experience</p>
 			</div>
 			<div class="col-xs-6 col-md-3 educationSections britsh">
@@ -129,7 +126,7 @@ winning attitudey</p>
 				<p>THE GOLDEN RULE</p>
 				<p class="text">We treat people the way
 we want to be treated
-with honesty, integrity and
+with honesty and
 fairness when in doubt the
 golden rule trumps all</p>
 			</div>
