--- a/templates/base.html
+++ b/templates/base.html
@@ -6,10 +6,10 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>FIRST-LTD</title>
 	<meta name="description"
         content="First Education is qualified in Print books and e-learning technologies including but not limited to online educational content.">
 	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-	<title>FIRST-LTD</title>
 	<!-- Bootstrap -->
 	<link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
 	<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
@@ -67,7 +67,7 @@
 					<span class="icon-bar"></span>
 				</button>
 				<a class="navbar-brand" href="{% url 'Home:home' %}">
-					<img class="navbarLogo" alt="Brand" src="{% static 'imgs/alawalredlogo.png' %}">
+					<img class="navbarLogo" alt="Brand" src="{% static 'imgs/alawalredlogo.webp' %}">
 				</a>
 			</div>
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -91,7 +91,6 @@
 					</li>
 
 					<li><a href="{% url 'Home:contact-us' %}">CONTACT US</a></li>
-					{% comment %}
 					{% if user.is_authenticated %}
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown">
@@ -106,9 +105,8 @@
 							or login</a>
 					</li>
 					{% endif %}
-					{% endcomment %}
-					<!--<li><a href="{% url 'Home_book:checkout' %}"><span class="cartWord">CART </span><i class="fa fa-shopping-cart"-->
-					<!--			aria-hidden="true"></i><span class="badge"></span></a></li>-->
+					<li><a href="{% url 'Home_book:checkout' %}"><span class="cartWord">CART </span><i class="fa fa-shopping-cart"
+								aria-hidden="true"></i><span class="badge"></span></a></li>
 				</ul>
 			</div>
 		</div>
@@ -139,7 +137,7 @@
 				</p>
 			</div>
 			<div class="col-sm-4 text-center followUs">
-				<img class="img-responsive" src="{% static 'imgs/alawalwhitelogo.png' %}" alt="Logo">
+				<img class="img-responsive" src="{% static 'imgs/alawalwhitelogo.webp' %}" alt="Logo">
 				<p>FOLLOW US</p>
 				<a href="{{ footer.facebook_link }}"><i class="fa fa-facebook-square" aria-hidden="true"></i></a>
 				<a href="{{ footer.instgram_link }}"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
@@ -157,7 +155,7 @@
 			</div>
 		</div>
 	</section>
-	<a href="#" class="scrollToTop"><img class="img-responsive " src="{% static 'imgs/scrolltotop.png' %}" alt="scroll to top"></a>
+	<a href="#" class="scrollToTop"><img class="img-responsive " src="{% static 'imgs/scrolltotop.webp' %}" alt="scroll to top"></a>
 	<div class="loadingPage">
 		<div class="book">
 			<div class="book__page"></div>
@@ -171,6 +169,7 @@
 	<script src="{% static 'js/owl.carousel.min.js' %}"></script>
 	<!-- Include all compiled plugins (below), or include individual files as needed -->
 	<script src="{% static 'js/bootstrap.min.js' %}"></script>
+	<script src="{% static 'js/niceCountryInput.js' %}"></script>
 	<script src="{% static 'js/main.js' %}"></script>
 	{% block Script %}
 
