--- a/templates/signupandlogin.html
+++ b/templates/signupandlogin.html
@@ -7,7 +7,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-  <title>FIRST PUBLISHER</title>
+  <title>FIRST-LTD</title>
+	<meta name="description"
+        content="First Education is qualified in Print books and e-learning technologies including but not limited to online educational content.">
   <!-- Bootstrap -->
   <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" />
 
@@ -129,71 +131,60 @@
 
 <body>
   <nav class="navbar navbar-default navbar-fixed-top">
-    <div class="container">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
-          data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="{% url 'Home:home' %}">
-          <img class="navbarLogo" alt="Brand" src="{% static 'imgs/alawalredlogo.png' %}" />
-        </a>
-      </div>
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav navbar-right">
-          <li><a href="{% url 'Home:home' %}">HOME</a></li>
-          <li><a href="{% url 'Home:aboutus' %}">ABOUT US</a></li>
-          <li><a href="{% url 'Home:publishers' %}">PUBLISHERS</a></li>
-          <li class="dropdown">
-            <a class="dropdown-toggle" data-toggle="dropdown" href="#">BOOKS FOR SALE <span class="caret"></span></a>
-            <ul class="dropdown-menu scrollable-menu">
-              <li>
-                <a href="{% url 'Home_stores:booksforsale' %}">All Categories</a>
-              </li>
+		<div class="container">
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+					data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+					<span class="sr-only">Toggle navigation</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+				<a class="navbar-brand" href="{% url 'Home:home' %}">
+					<img class="navbarLogo" alt="Brand" src="{% static 'imgs/alawalredlogo.webp' %}">
+				</a>
+			</div>
+			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+				<ul class="nav navbar-nav navbar-right">
+					<li><a href="{% url 'Home:home' %}">HOME</a></li>
+					<li><a href="{% url 'Home:aboutus' %}">ABOUT US</a></li>
+					<li><a href="{% url 'Home:publishers' %}">PARTNERS</a></li>
+					<li class="dropdown">
+						<a class="dropdown-toggle" data-toggle="dropdown" href="#">OUR PRODUCTS
+							<span class="caret"></span></a>
+						<ul class="dropdown-menu  scrollable-menu">
+							<li><a href="{% url 'Home_stores:booksforsale' %}">All CATEGORIES</a></li>
 
-              {% for i in Category %}
+							{% for c in category %}
 
-              <li>
-                <a href="{% url 'Home_stores:booksforsale_subcategory' i.slug %}">{{i.name}}</a>
-              </li>
+							<li><a href="{% url 'Home_stores:booksforsale_subcategory' c.slug %}">{{c.name}}</a></li>
 
-              {% endfor %}
-            </ul>
-          </li>
-          <li>
-            <a href="{% url 'Home:specialeducation' %}">SPECIAL EDUCATION</a>
-          </li>
-          <li><a href="{% url 'Home:contact-us' %}">CONTACT US</a></li>
-          {% comment %}
-          {% if user.is_authenticated %}
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-              <img src="http://placehold.it/30x30" class="profile-image img-circle" />
-              {{ user.get_username }} <b class="caret"></b></a>
-            <ul class="dropdown-menu">
-              <li>
-                <a href="{% url 'Home:logout' %}?next={{request.path}}"><i class="fa fa-sign-out"></i> Sign-out</a>
-              </li>
-            </ul>
-          </li>
-          {% else %}
-          <li>
-            <a href="{% url 'Home:sign-up-and-log-in' %}"><i class="fa fa-user" aria-hidden="true"></i> Sign up or
-              login</a>
-          </li>
-          {% endif %}
-          {% endcomment %}
-          <!--<li>-->
-          <!--  <a href="{% url 'Home_book:checkout' %}"><span class="cartWord">CART </span><i class="fa fa-shopping-cart"-->
-          <!--      aria-hidden="true"></i><span class="badge"></span></a>-->
-          <!--</li>-->
-        </ul>
-      </div>
-    </div>
-  </nav>
+							{% endfor %}
+
+						</ul>
+					</li>
+
+					<li><a href="{% url 'Home:contact-us' %}">CONTACT US</a></li>
+					{% if user.is_authenticated %}
+					<li class="dropdown">
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown">
+							{{ user.get_username }} <b class="caret"></b></a>
+						<ul class="dropdown-menu">
+							<li><a href="{% url 'Home:logout' %}?next={{request.path}}"><i class="fa fa-sign-out"></i>
+									Sign-out</a></li>
+						</ul>
+					</li>
+					{% else %}
+					<li><a href="{% url 'Home:sign-up-and-log-in' %}"><i class="fa fa-user" aria-hidden="true"></i> Sign up
+							or login</a>
+					</li>
+					{% endif %}
+					<li><a href="{% url 'Home_book:checkout' %}"><span class="cartWord">CART </span><i class="fa fa-shopping-cart"
+								aria-hidden="true"></i><span class="badge"></span></a></li>
+				</ul>
+			</div>
+		</div>
+	</nav>
 
   <div class="container containerlogin">
     <div class="forms-container">
