update payment page

--- a/templates/base.html
+++ b/templates/base.html
@@ -147,8 +147,8 @@
 				<p class="contactsTitle">SITE MAP</p>
 				<a class="contactsDetails" href="{% url 'Home:home' %}">HOME</a>
 				<a class="contactsDetails" href="{% url 'Home:aboutus' %}">ABOUT</a>
-				<a class="contactsDetails" href="{% url 'Home:publishers' %}">PUBLISHERS</a>
-				<a class="contactsDetails" href="{% url 'Home_stores:booksforsale' %}">BOOKS FOR SALE
+				<a class="contactsDetails" href="{% url 'Home:publishers' %}">PARTNERS</a>
+				<a class="contactsDetails" href="{% url 'Home_stores:booksforsale' %}">OUR PRODUCTS
 				</a>
 
 				<a class="contactsDetails" href="{% url 'Home:contact-us' %}">CONTACT US</a>
